--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -10,6 +10,10 @@
   background:#f28200;
 }
 
+.btn.bg-or:hover{
+  background: #cb6d00;
+}
+
 .indexContainer{
   padding-left:calc((100% - 1024px) /2) !important;
   padding-right:calc((100% - 1024px) /2) !important;
